log/build_2022-12-29_20-58-50/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/root/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/listener.py", line 22
    node.get_logger()info("呼び出し失敗")
                     ^^^^
SyntaxError: invalid syntax

